[workspace]
resolver = "2"
members = [
	"packages/frontend"
]

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies.actix-files]
version = "0.6.6"

[workspace.dependencies.actix-web]
version = "4.5.1"
features = ["macros"]

[workspace.dependencies.anyhow]
version = "1.0.81"

[workspace.dependencies.catppuccin]
version = "2.4.0"

[workspace.dependencies.http]
version = "1.1.0"

[workspace.dependencies.leptos]
version = "0.6.12"
features = ["nightly"]

[workspace.dependencies.leptos_actix]
version = "0.6.12"

[workspace.dependencies.leptos_meta]
version = "0.6.12"
features = ["nightly"]

[workspace.dependencies.leptos_router]
version = "0.6.12"
features = ["nightly"]

[workspace.dependencies.serde]
version = "1.0.203"
features = ["derive"]

[workspace.dependencies.tracing]
version = "0.1.40"

[workspace.dependencies.wiwi]
git = "https://github.com/meadowsys/wiwi"
rev = "9d0a6c3e0bf542e6899a7b113fd3b1d5cbf39978"

[workspace.dependencies.wasm-bindgen]
version = "0.2.92"
