[workspace]
resolver = "2"
members = [
	"packages/app",
	"packages/db"
]

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies.actix-files]
version = "0.6.6"

[workspace.dependencies.actix-web]
version = "4.5.1"
features = ["macros"]

[workspace.dependencies.anyhow]
version = "1.0.81"

[workspace.dependencies.catppuccin]
version = "2.4.0"

[workspace.dependencies.gloo-net]
version = "0.5.0"

[workspace.dependencies.http]
version = "1.1.0"

[workspace.dependencies.js-sys]
version = "0.3.69"

[workspace.dependencies.leptos]
version = "0.6.12"
features = ["nightly"]

[workspace.dependencies.leptos_actix]
version = "0.6.12"

[workspace.dependencies.leptos_meta]
version = "0.6.12"
features = ["nightly"]

[workspace.dependencies.leptos_router]
version = "0.6.12"
features = ["nightly"]

[workspace.dependencies.parking_lot]
version = "0.12.3"

[workspace.dependencies.pink-prose-db]
path = "packages/db"

[workspace.dependencies.serde]
version = "1.0.203"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.120"

[workspace.dependencies.serde_qs]
version = "0.13.0"

[workspace.dependencies.surrealdb]
git = "https://github.com/surrealdb/surrealdb"
rev = "03bd9d37fb43204b9f787816f21c2ba781545b03"

[workspace.dependencies.thiserror]
version = "1.0.63"

[workspace.dependencies.tracing]
version = "0.1.40"

[workspace.dependencies.urlencoding]
version = "2.1.3"

[workspace.dependencies.web-sys]
version = "0.3.69"

[workspace.dependencies.wiwi]
git = "https://github.com/meadowsys/wiwi"
rev = "d48b45b9c4e656bb92006560f6a9c823b5fec236"

[workspace.dependencies.wasm-bindgen]
version = "0.2.92"
